--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build & Deploy
         env:
-            PRIVATE_KEY: ${{ secrets.GFE }}
+            PRIVATE_KEY: ${{ secrets.GFE_TEST_KEY }}
             HOSTNAME: 34.233.161.125
             USER_NAME: ubuntu
       
